--- a/apps/sep6/project.json
+++ b/apps/sep6/project.json
@@ -5,26 +5,35 @@
   "projectType": "application",
   "targets": {
     "build": {
-      "executor": "@nx/webpack:webpack",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "executor": "@nx/esbuild:esbuild",
+      "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "target": "node",
-        "compiler": "tsc",
+        "platform": "node",
         "outputPath": "dist/apps/sep6",
+        "format": ["cjs"],
+        "bundle": false,
         "main": "apps/sep6/src/main.ts",
         "tsConfig": "apps/sep6/tsconfig.app.json",
-        "assets": [
-          "apps/sep6/src/assets"
-        ],
-        "isolatedConfig": true,
-        "webpackConfig": "apps/sep6/webpack.config.js"
+        "assets": ["apps/sep6/src/assets"],
+        "generatePackageJson": true,
+        "esbuildOptions": {
+          "sourcemap": true,
+          "outExtension": {
+            ".js": ".js"
+          }
+        }
       },
       "configurations": {
         "development": {},
-        "production": {}
+        "production": {
+          "esbuildOptions": {
+            "sourcemap": false,
+            "outExtension": {
+              ".js": ".js"
+            }
+          }
+        }
       }
     },
     "serve": {
@@ -44,20 +53,14 @@
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/sep6/**/*.ts"
-        ]
+        "lintFilePatterns": ["apps/sep6/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/sep6/jest.config.ts",
         "passWithNoTests": true
