Working CRUD with mocked auth.

--- a/package.json
+++ b/package.json
@@ -2,13 +2,25 @@
   "name": "@sep6/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "npx nx run-many -t build",
+    "dev": "npx nx serve sep6",
+    "cdk": "rm -rf cdk.out && npm run build && npx cdk --profile admin --region us-west-2",
+    "api:deploy": "npm run cdk deploy sep6-api-stack",
+    "api:diff": "npm run cdk diff sep6-api-stack",
+    "play": "npx ts-node ./scripts/play.ts"
+  },
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.408.0",
+    "@aws-sdk/lib-dynamodb": "^3.408.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
-    "axios": "^1.0.0",
+    "@vendia/serverless-express": "^4.10.4",
+    "aws-lambda": "^1.0.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
@@ -25,10 +37,15 @@
     "@nx/node": "16.8.0",
     "@nx/webpack": "16.8.0",
     "@nx/workspace": "16.8.0",
+    "@types/aws-lambda": "^8.10.119",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "aws-cdk": "^2.95.0",
+    "aws-cdk-lib": "^2.95.0",
+    "axios": "^1.5.0",
+    "constructs": "^10.2.70",
     "esbuild": "^0.19.2",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "8.1.0",
