--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "npx nx serve sep6",
     "cdk": "rm -rf cdk.out && npm run build && npx cdk --profile admin --region us-west-2",
     "api:deploy": "npm run cdk deploy sep6-api-stack",
-    "api:diff": "npm run cdk diff sep6-api-stack",
+    "api:diff": "./scripts/diff-api",
     "play": "npx ts-node ./scripts/play.ts"
   },
   "private": true,
@@ -17,10 +17,14 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@swc/helpers": "~0.5.0",
     "@vendia/serverless-express": "^4.10.4",
     "aws-lambda": "^1.0.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
@@ -31,17 +35,27 @@
     "@nx/esbuild": "16.8.0",
     "@nx/eslint-plugin": "16.8.0",
     "@nx/jest": "16.8.0",
-    "@nx/js": "16.8.0",
+    "@nx/js": "16.8.1",
     "@nx/linter": "16.8.0",
     "@nx/nest": "16.8.0",
     "@nx/node": "16.8.0",
+    "@nx/react": "^16.8.1",
+    "@nx/vite": "16.8.1",
     "@nx/webpack": "16.8.0",
     "@nx/workspace": "16.8.0",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.51",
+    "@testing-library/react": "14.0.0",
     "@types/aws-lambda": "^8.10.119",
     "@types/jest": "^29.4.0",
-    "@types/node": "~18.7.1",
+    "@types/node": "18.14.2",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "@vitejs/plugin-react": "~4.0.0",
+    "@vitest/coverage-c8": "~0.32.0",
+    "@vitest/ui": "~0.32.0",
     "aws-cdk": "^2.95.0",
     "aws-cdk-lib": "^2.95.0",
     "axios": "^1.5.0",
@@ -49,12 +63,19 @@
     "esbuild": "^0.19.2",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "jsdom": "~22.1.0",
     "nx": "16.8.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "vite": "~4.3.9",
+    "vitest": "~0.32.0"
   }
 }
