Add basic cognito support - user pools are created and made available to web apps

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "@sep6/app": ["libs/app/src/index.ts"],
+      "@sep6/client-config": ["libs/client-config/src/index.ts"],
       "@sep6/constants": ["libs/constants/src/index.ts"],
       "@sep6/utils": ["libs/utils/src/index.ts"]
     }
