--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.3.0",
     "@aws-sdk/client-dynamodb": "^3.408.0",
     "@aws-sdk/lib-dynamodb": "^3.408.0",
     "@nestjs/common": "^10.0.2",
@@ -19,6 +20,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "@swc/helpers": "~0.5.0",
     "@vendia/serverless-express": "^4.10.4",
+    "aws-amplify": "^5.3.10",
     "aws-lambda": "^1.0.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -56,6 +58,7 @@
     "@vitejs/plugin-react": "~4.0.0",
     "@vitest/coverage-c8": "~0.32.0",
     "@vitest/ui": "~0.32.0",
+    "ansi-colors": "^4.1.3",
     "aws-cdk": "^2.95.0",
     "aws-cdk-lib": "^2.95.0",
     "axios": "^1.5.0",
