--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "scripts": {
     "build": "npx nx run-many -t build",
     "dev": "npx nx serve sep6",
-    "cdk": "rm -rf cdk.out && npm run build && npx cdk --profile admin --region us-west-2",
-    "api:deploy": "paws admin && npm run cdk deploy sep6-api-stack",
+    "cdk": "paws admin && rm -rf cdk.out && npm run build && npx cdk --profile admin --region us-west-2",
+    "api:deploy": "npm run cdk deploy sep6-api-stack",
     "api:diff": "./scripts/diff-api",
     "play": "npx ts-node ./scripts/play.ts"
   },
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^5.3.0",
+    "@aws-sdk/client-cognito-identity": "^3.409.0",
     "@aws-sdk/client-dynamodb": "^3.408.0",
+    "@aws-sdk/client-s3": "^3.409.0",
+    "@aws-sdk/credential-providers": "^3.409.0",
     "@aws-sdk/lib-dynamodb": "^3.408.0",
+    "@aws-sdk/lib-storage": "^3.409.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
