--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-amplify/ui-react": "^5.3.0",
     "@aws-sdk/client-cognito-identity": "^3.409.0",
     "@aws-sdk/client-dynamodb": "^3.408.0",
+    "@aws-sdk/client-lambda": "^3.410.0",
     "@aws-sdk/client-s3": "^3.409.0",
     "@aws-sdk/credential-providers": "^3.409.0",
     "@aws-sdk/lib-dynamodb": "^3.408.0",
