--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,9 @@
       "@sep6/app": ["libs/app/src/index.ts"],
       "@sep6/client-config": ["libs/client-config/src/index.ts"],
       "@sep6/constants": ["libs/constants/src/index.ts"],
+      "@sep6/idea2": ["libs/idea2/src/index.ts"],
+      "@sep6/idea2-cdk": ["libs/idea2-cdk/src/index.ts"],
+      "@sep6/idea2-example": ["libs/idea2-example/src/index.ts"],
       "@sep6/utils": ["libs/utils/src/index.ts"]
     }
   },
