--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:deploy": "npm run cdk deploy idea2-test-stack && npm run test:fetch-map",
     "test:diff": "npm run cdk diff idea2-test-stack",
     "test:fetch-map": "AWS_PAGER='' aws s3api get-object --bucket idea2-test-stack-construct-map --key map.json test-construct-map.json --profile admin && cat test-construct-map.json | jq > test-construct-map-formatted.json && mv test-construct-map-formatted.json test-construct-map.json",
-    "test": "paws admin && nx reset && NODE_NO_WARNINGS=1 AWS_PROFILE=admin AWS_REGION=us-west-2 npx nx test idea2-test-cases"
+    "test": "paws admin && nx reset && NODE_NO_WARNINGS=1 AWS_PROFILE=admin AWS_REGION=us-west-2 npx nx run-many -t test",
+    "e2e:local": "npx nx run-many -t e2e",
+    "e2e": "BASE_URL='https://d3vfq13qxamf4s.cloudfront.net' npm run e2e:local"
   },
   "private": true,
   "dependencies": {
@@ -52,10 +54,12 @@
     "@nx/linter": "16.8.0",
     "@nx/nest": "16.8.0",
     "@nx/node": "16.8.0",
+    "@nx/playwright": "16.8.1",
     "@nx/react": "^16.8.1",
     "@nx/vite": "16.8.1",
     "@nx/webpack": "16.8.0",
     "@nx/workspace": "16.8.0",
+    "@playwright/test": "^1.36.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
@@ -79,6 +83,7 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
