Add client config and E2E tests for the static site client config loading.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test:diff": "npm run cdk diff idea2-test-stack",
     "test:fetch-map": "AWS_PAGER='' aws s3api get-object --bucket idea2-test-stack-construct-map --key map.json test-construct-map.json --profile admin && cat test-construct-map.json | jq > test-construct-map-formatted.json && mv test-construct-map-formatted.json test-construct-map.json",
     "test": "paws admin && nx reset && NODE_NO_WARNINGS=1 AWS_PROFILE=admin AWS_REGION=us-west-2 npx nx run-many -t test",
-    "e2e:local": "npx nx run-many -t e2e",
-    "e2e": "BASE_URL='https://d3vfq13qxamf4s.cloudfront.net' npm run e2e:local"
+    "e2e": "npx nx run-many -t e2e"
   },
   "private": true,
   "dependencies": {
