--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,7 @@
       "@sep6/client-config": ["libs/client-config/src/index.ts"],
       "@sep6/constants": ["libs/constants/src/index.ts"],
       "@sep6/idea2": ["libs/idea2/src/index.ts"],
+      "@sep6/idea2-browser-client": ["libs/idea2-browser-client/src/index.ts"],
       "@sep6/idea2-cdk": ["libs/idea2-cdk/src/index.ts"],
       "@sep6/idea2-local": ["libs/idea2-local/src/index.ts"],
       "@sep6/idea2-test-cases": ["libs/idea2-test-cases/src/index.ts"],
