--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@swc/helpers": "~0.5.0",
     "@tanstack/react-query": "^4.35.0",
     "@vendia/serverless-express": "^4.10.4",
+    "amazon-cognito-identity-js": "^6.3.6",
     "aws-amplify": "^5.3.10",
     "aws-lambda": "^1.0.7",
     "class-transformer": "^0.5.1",
