--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test-case": "npx nx reset && NODE_NO_WARNINGS=1 AWS_PROFILE=admin AWS_REGION=us-west-2 npx nx run idea2-test-cases:test --testFile",
     "gen:static-site-config": "npm run build && AWS_PROFILE=admin node dist/apps/generate-static-site-config/main.js",
     "e2e": "npm run e2e:fetch-map && npx nx reset && npx nx run-many -t e2e",
+    "e2e:local": "BASE_URL='http://localhost:4200' npx nx run-many -t e2e",
     "e2e:fetch-map": "AWS_PAGER='' AWS_PROFILE=admin AWS_REGION=us-west-2 aws s3api get-object --bucket idea2-test-static-site-idea2-map-bucket --key idea2-test-static-site.site.json --no-paginate idea2-test-static-site.json"
   },
   "private": true,
