--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@swc/helpers": "~0.5.0",
-    "@tanstack/react-query": "^4.35.0",
+    "@tanstack/react-query": "^4.35.3",
     "@vendia/serverless-express": "^4.10.4",
     "amazon-cognito-identity-js": "^6.3.6",
     "aws-amplify": "^5.3.10",
@@ -44,7 +44,7 @@
     "class-validator": "^0.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.11.2",
+    "react-router-dom": "^6.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
