--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "cdk": "paws admin && rm -rf cdk.out && npm run build && npx cdk --profile admin --region us-west-2",
     "api:deploy": "npm run cdk deploy idea2-stack",
     "api:diff": "npm run cdk diff idea2-stack",
-    "test:deploy": "npm run cdk deploy '*' && npm run gen:static-site-config",
-    "test:deploy:static-site": "npm run cdk deploy idea2-test-static-site && npm run gen:static-site-config",
+    "test:deploy": "npm run cdk deploy '*'",
+    "test:deploy:static-site": "npm run cdk deploy idea2-test-static-site",
     "test:diff": "npm run cdk diff idea2-test-stack",
     "test:synth": "npm run cdk synth idea2-test-stack",
     "test": "paws admin && nx reset && NODE_NO_WARNINGS=1 AWS_PROFILE=admin AWS_REGION=us-west-2 npx nx run-many -t test",
     "test-case": "npx nx reset && NODE_NO_WARNINGS=1 AWS_PROFILE=admin AWS_REGION=us-west-2 npx nx run idea2-test-cases:test --testFile",
-    "gen:static-site-config": "npm run build && AWS_PROFILE=admin node dist/apps/generate-static-site-config/main.js",
     "e2e": "npm run e2e:fetch-map && npx nx reset && npx nx run-many -t e2e",
     "e2e:local": "BASE_URL='http://localhost:4200' npx nx run-many -t e2e",
     "e2e:fetch-map": "AWS_PAGER='' AWS_PROFILE=admin AWS_REGION=us-west-2 aws s3api get-object --bucket idea2-test-static-site-idea2-map-bucket --key idea2-test-static-site.site.json --no-paginate idea2-test-static-site.json"
@@ -34,6 +33,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@sinclair/typebox": "^0.31.15",
     "@swc/helpers": "~0.5.0",
     "@tanstack/react-query": "^4.35.3",
     "@vendia/serverless-express": "^4.10.4",
@@ -65,6 +65,7 @@
     "@nx/webpack": "16.8.0",
     "@nx/workspace": "16.8.0",
     "@playwright/test": "^1.36.0",
+    "@prettier/sync": "^0.3.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
@@ -95,7 +96,7 @@
     "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "16.8.0",
-    "prettier": "^2.6.2",
+    "prettier": "^3.0.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3",
