--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@sep6/source",
+  "name": "@aedi/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "build": "npx nx run-many -t build",
-    "dev": "npx nx serve sep6",
+    "dev": "npx nx serve aedi",
     "cdk": "paws admin && rm -rf cdk.out && npm run build && npx cdk --profile admin --region us-west-2",
     "api:deploy": "npm run cdk deploy idea2-stack",
     "api:diff": "npm run cdk diff idea2-stack",
@@ -20,7 +20,6 @@
   },
   "private": true,
   "dependencies": {
-    "@aws-amplify/ui-react": "^5.3.0",
     "@aws-sdk/client-cognito-identity": "^3.414.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.410.0",
     "@aws-sdk/client-dynamodb": "^3.408.0",
@@ -30,9 +29,6 @@
     "@aws-sdk/credential-providers": "^3.409.0",
     "@aws-sdk/lib-dynamodb": "^3.408.0",
     "@aws-sdk/lib-storage": "^3.409.0",
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.2",
     "@sinclair/typebox": "^0.31.15",
     "@swc/helpers": "~0.5.0",
     "@tanstack/react-query": "^4.35.3",
@@ -40,24 +36,17 @@
     "amazon-cognito-identity-js": "^6.3.6",
     "aws-amplify": "^5.3.10",
     "aws-lambda": "^1.0.7",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.11.2",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.2",
     "@nx/esbuild": "16.8.0",
     "@nx/eslint-plugin": "16.8.0",
     "@nx/jest": "16.8.0",
     "@nx/js": "16.8.1",
     "@nx/linter": "16.8.0",
-    "@nx/nest": "16.8.0",
     "@nx/node": "16.8.0",
     "@nx/playwright": "16.8.1",
     "@nx/react": "^16.8.1",
@@ -79,10 +68,8 @@
     "@vitejs/plugin-react": "~4.0.0",
     "@vitest/coverage-c8": "~0.32.0",
     "@vitest/ui": "~0.32.0",
-    "ansi-colors": "^4.1.3",
     "aws-cdk": "^2.95.0",
     "aws-cdk-lib": "^2.95.0",
-    "axios": "^1.5.0",
     "constructs": "^10.2.70",
     "esbuild": "^0.19.2",
     "eslint": "~8.46.0",
