--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "npx nx serve aedi",
     "cdk": "paws admin && rm -rf cdk.out && npm run build && npx cdk --profile admin --region us-west-2",
     "test:deploy": "npm run cdk deploy '*' -- --require-approval never",
+    "test:deploy:static-site": "npm run cdk deploy 'aedi-test-static-site' -- --require-approval never",
     "test:diff": "npm run cdk diff '*'",
     "test": "paws admin && nx reset && NODE_NO_WARNINGS=1 AWS_PROFILE=admin AWS_REGION=us-west-2 npx nx run-many -t test",
     "e2e": "npm run e2e:fetch-map && npx nx reset && npx nx run-many -t e2e",
