Add tailwind to the test app.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "npx nx run-many -t build",
-    "dev": "npx nx serve aedi",
+    "build": "VITE_CLIENT_CONFIG_DOMAIN='' npx nx run-many -t build",
+    "dev": "VITE_CLIENT_CONFIG_DOMAIN='https://d28ut8rnwx95ud.cloudfront.net' npx nx serve test-app",
     "cdk": "paws admin && rm -rf cdk.out && npm run build && npx cdk --profile admin --region us-west-2",
     "test:deploy": "npm run cdk deploy '*' -- --require-approval never",
     "test:deploy:static-site": "npm run cdk deploy 'aedi-test-static-site' -- --require-approval never",
@@ -31,6 +31,7 @@
     "amazon-cognito-identity-js": "^6.3.6",
     "aws-amplify": "^5.3.10",
     "aws-lambda": "^1.0.7",
+    "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.11.2",
@@ -63,6 +64,7 @@
     "@vitejs/plugin-react": "~4.0.0",
     "@vitest/coverage-c8": "~0.32.0",
     "@vitest/ui": "~0.32.0",
+    "autoprefixer": "10.4.13",
     "aws-cdk": "^2.95.0",
     "aws-cdk-lib": "^2.95.0",
     "constructs": "^10.2.70",
@@ -78,7 +80,9 @@
     "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "16.8.0",
+    "postcss": "8.4.21",
     "prettier": "^3.0.3",
+    "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3",
