--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@swc/helpers": "~0.5.0",
     "@tanstack/react-query": "^4.35.3",
     "@vendia/serverless-express": "^4.10.4",
+    "ajv": "^8.12.0",
+    "ajv-errors": "^3.0.0",
+    "ajv-formats": "^2.1.1",
     "amazon-cognito-identity-js": "^6.3.6",
     "aws-amplify": "^5.3.10",
     "aws-lambda": "^1.0.7",
