--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.11.2",
+    "sweetalert2": "^11.7.28",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
