--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/credential-providers": "^3.409.0",
     "@aws-sdk/lib-dynamodb": "^3.408.0",
     "@aws-sdk/lib-storage": "^3.409.0",
+    "@headlessui/react": "^1.7.17",
     "@sinclair/typebox": "^0.31.15",
     "@swc/helpers": "~0.5.0",
     "@tanstack/react-query": "^4.35.3",
