--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sinclair/typebox": "^0.31.15",
     "@swc/helpers": "~0.5.0",
     "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query-devtools": "^4.35.3",
     "@vendia/serverless-express": "^4.10.4",
     "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0",
