--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "license": "MIT",
   "scripts": {
     "build": "VITE_CLIENT_CONFIG_DOMAIN='' npx nx run-many -t build",
-    "dev": "VITE_CLIENT_CONFIG_DOMAIN='https://d28ut8rnwx95ud.cloudfront.net' npx nx serve test-app",
+    "dev": "VITE_CLIENT_CONFIG_DOMAIN='https://contacts.smplj.xyz' npx nx serve test-app",
     "cdk": "paws admin && rm -rf cdk.out && npm run build && npx cdk --profile admin --region us-west-2",
     "test:deploy": "npm run cdk deploy '*' -- --require-approval never",
     "test:deploy:static-site": "npm run cdk deploy 'aedi-test-static-site' -- --require-approval never",
     "test:diff": "npm run cdk diff '*'",
     "test": "paws admin && nx reset && NODE_NO_WARNINGS=1 AWS_PROFILE=admin AWS_REGION=us-west-2 npx nx run-many -t test",
-    "e2e": "npx nx reset && BASE_URL='https://d28ut8rnwx95ud.cloudfront.net' npx nx run-many -t e2e",
+    "e2e": "npx nx reset && BASE_URL='https://contacts.smplj.xyz' npx nx run-many -t e2e",
     "e2e:local": "npx nx reset && BASE_URL='http://localhost:4200' npx nx run-many -t e2e"
   },
   "private": true,
