--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cdk": "paws admin && rm -rf cdk.out && npm run build && npx cdk --profile admin --region us-west-2",
     "test:deploy": "npm run cdk deploy '*' -- --require-approval never",
     "test:deploy:static-site": "npm run cdk deploy 'aedi-test-static-site' -- --require-approval never",
+    "test:deploy:discord-bot": "npm run cdk deploy 'aedi-test-discord-bot' -- --require-approval never",
     "test:diff": "npm run cdk diff '*'",
     "test": "paws admin && nx reset && NODE_NO_WARNINGS=1 AWS_PROFILE=admin AWS_REGION=us-west-2 npx nx run-many -t test",
     "e2e": "npx nx reset && BASE_URL='https://contacts.smplj.xyz' npx nx run-many -t e2e",
@@ -36,12 +37,14 @@
     "amazon-cognito-identity-js": "^6.3.6",
     "aws-amplify": "^5.3.10",
     "aws-lambda": "^1.0.7",
+    "discord-interactions": "^3.4.0",
     "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.11.2",
     "sweetalert2": "^11.7.28",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@nx/esbuild": "16.8.0",
