Move discord integration into its own library. Add async responses to discord bot to get around 3-second timeout.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,6 +28,9 @@
       "@aedi/common": [
         "libs/common/src/index.ts"
       ],
+      "@aedi/discord": [
+        "libs/discord/src/index.ts"
+      ],
       "@aedi/local": [
         "libs/local/src/index.ts"
       ],
