Switch to @mrgrain/cdk-esbuild for handling lambda bundling - this package provides a lot more options than the base cdk NodejsLambda construct.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:deploy": "npm run cdk deploy '*' -- --require-approval never",
     "test:deploy:static-site": "npm run cdk deploy 'aedi-test-static-site' -- --require-approval never",
     "test:deploy:discord-bot": "npm run cdk deploy 'aedi-test-discord-bot' -- --require-approval never",
+    "test:deploy:basic-lambda": "npm run cdk deploy 'aedi-test-basic-lambda' -- --require-approval never",
     "test:diff": "npm run cdk diff '*'",
     "test": "paws admin && nx reset && NODE_NO_WARNINGS=1 AWS_PROFILE=admin AWS_REGION=us-west-2 npx nx run-many -t test",
     "e2e": "npx nx reset && BASE_URL='https://contacts.smplj.xyz' npx nx run-many -t e2e",
@@ -31,6 +32,7 @@
     "@aws-sdk/lib-dynamodb": "^3.408.0",
     "@aws-sdk/lib-storage": "^3.409.0",
     "@headlessui/react": "^1.7.17",
+    "@mrgrain/cdk-esbuild": "^5.0.2",
     "@sinclair/typebox": "^0.31.15",
     "@swc/helpers": "~0.5.0",
     "@tanstack/react-query": "^4.35.3",
