--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:deploy:static-site": "npm run cdk deploy 'aedi-test-static-site' -- --require-approval never",
     "test:deploy:discord-bot": "npm run cdk deploy 'aedi-test-discord-bot' -- --require-approval never",
     "test:deploy:basic-lambda": "npm run cdk deploy 'aedi-test-basic-lambda' -- --require-approval never",
+    "test:deploy:ts-site-source": "npm run cdk deploy 'aedi-test-ts-site-source' -- --require-approval never",
     "test:diff": "npm run cdk diff '*'",
     "test": "paws admin && nx reset && NODE_NO_WARNINGS=1 AWS_PROFILE=admin AWS_REGION=us-west-2 npx nx run-many -t test",
     "e2e": "npx nx reset && BASE_URL='https://contacts.smplj.xyz' npx nx run-many -t e2e",
