Add rough fargate service support.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:deploy:discord-bot": "npm run cdk deploy 'aedi-test-discord-bot' -- --require-approval never",
     "test:deploy:basic-lambda": "npm run cdk deploy 'aedi-test-basic-lambda' -- --require-approval never",
     "test:deploy:ts-site-source": "npm run cdk deploy 'aedi-test-ts-site-source' -- --require-approval never",
+    "test:deploy:fargate-service": "npm run cdk deploy 'aedi-test-fargate-service' -- --require-approval never",
     "test:diff": "npm run cdk diff '*'",
     "test": "paws admin && nx reset && NODE_NO_WARNINGS=1 AWS_PROFILE=admin AWS_REGION=us-west-2 npx nx run-many -t test",
     "e2e": "npx nx reset && BASE_URL='https://contacts.smplj.xyz' npx nx run-many -t e2e",
@@ -46,6 +47,7 @@
     "aws-amplify": "^5.3.10",
     "aws-lambda": "^1.0.7",
     "discord-interactions": "^3.4.0",
+    "fastify": "^4.23.2",
     "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
